--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "electron": "^36.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^4.1.8",
     "wait-on": "^8.0.3",
