--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-env": "^7.0.3",
     "electron": "^36.3.2",
     "react": "^19.1.0",
+    "react-admin": "^5.8.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
